--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@genkit-ai/firebase": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
