This is my url https://9000-firebase-studio-1756463262326.cluster-cbeiit

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GEMINI_API_KEY=AIzaSyA41Ru1K9cwn9kDAXHTgMLgIE_K5H3sOjo
-ADMIN_API_KEY=your-admin-api-key-here
-ADMIN_SECRET_KEY=your-admin-secret-key-here
-EXCHANGE_RATE_API_KEY=your-exchange-rate-api-key-here
+ADMIN_API_KEY=your-super-secret-key
+ADMIN_SECRET_KEY=another-even-more-secret-key
+EXCHANGE_RATE_API_KEY=your-exchangerate-host-api-key
+ADMIN_API_URL=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/admin/stats
