--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ ADMIN_API_KEY=fp_secret_ts288py9h24rs4lyb5y6xz22ogn5yigj
 ADMIN_SECRET_KEY=fp_secret_ts288py9h24rs4lyb5y6xz22ogn5yigj
 EXCHANGE_RATE_API_KEY=e6bfac69f7921744c90ae5232156c465
 ADMIN_API_URL=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/admin/stats
+TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
+TRUELAYER_CLIENT_SECRET=e2b74791-0d2a-4004-8590-4f64102b646f
