--- a/.env
+++ b/.env
@@ -1,2 +1,19 @@
+# Financial Modeling Prep API Key (for stock data)
+# Get a free key from: https://site.financialmodelingprep.com/developer/docs/
+FINANCIAL_MODELING_PREP_API_KEY=""
 
-FINANCIAL_MODELING_PREP_API_KEY=
+# Truelayer API Credentials (for bank linking simulation)
+# These are sandbox keys and are safe to be here.
+NEXT_PUBLIC_TRUELAYER_AUTH_URL="https://auth.truelayer-sandbox.com/?response_type=code&client_id=finpulse-sandbox-d9611f&scope=info%20accounts%20balance%20transactions%20cards%20offline_access&redirect_uri=http://localhost:9002/api/truelayer/callback&providers=uk-ob-all%20uk-oauth-all%20uk-cs-mock"
+TRUELAYER_CLIENT_ID="finpulse-sandbox-d9611f"
+TRUELAYER_CLIENT_SECRET="161f5f3e-52f1-482a-9e79-4594a974b655"
+TRUELAYER_REDIRECT_URI="http://localhost:9002/api/truelayer/callback"
+
+# ExchangeRate-API Key (for currency conversion)
+# This is a public key for demonstration purposes.
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+
+
+# Admin Dashboard API Keys (generate your own secure random strings)
+ADMIN_API_KEY="your-secure-api-key"
+ADMIN_SECRET_KEY="your-secure-secret-key"
