--- a/.env
+++ b/.env
@@ -4,16 +4,16 @@ FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
 
 # Truelayer API Credentials (for bank linking simulation)
 # These are sandbox keys and are safe to be here.
-NEXT_PUBLIC_TRUELAYER_AUTH_URL=https://auth.truelayer-sandbox.com/?response_type=code&client_id=your_truelayer_client_id&scope=info%20accounts%20balance%20cards%20transactions%20direct_debits%20standing_orders%20offline_access&redirect_uri=http://localhost:9002/api/truelayer/callback&providers=uk-ob-all%20uk-oauth-all%20uk-cs-mock
-TRUELAYER_CLIENT_ID=your_truelayer_client_id
-TRUELAYER_CLIENT_SECRET=your_truelayer_client_secret
-TRUELAYER_REDIRECT_URI=http://localhost:9002/api/truelayer/callback
+NEXT_PUBLIC_TRUELAYER_AUTH_URL=https://auth.truelayer-sandbox.com/?response_type=code&client_id=finpulse-sandbox-d9611f&scope=info%20accounts%20balance%20cards%20transactions%20offline_access&redirect_uri=https://finpulse-860du.web.app/api/truelayer/callback&providers=uk-ob-all%20uk-oauth-all
+TRUELAYER_CLIENT_ID=finpulse-sandbox-d9611f
+TRUELAYER_CLIENT_SECRET=161f5f3e-52f1-482a-9e79-4594a974b655
+TRUELAYER_REDIRECT_URI=https://finpulse-860du.web.app/api/truelayer/callback
 
 # ExchangeRate-API Key (for currency conversion)
 # This is a public key for demonstration purposes.
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
 
 
 # Admin Dashboard API Keys (generate your own secure random strings)
-ADMIN_API_KEY=your_admin_api_key_here
-ADMIN_SECRET_KEY=your_admin_secret_key_here
+ADMIN_API_KEY=
+ADMIN_SECRET_KEY=
