When linking bank account

--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
 # Admin Dashboard API Keys (generate your own secure random strings)
 ADMIN_API_KEY=
 ADMIN_SECRET_KEY=
+NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID=finpulse-sandbox-d9611f
