Error: Truelayer environment variables are not set.     at createConsole

--- a/.env
+++ b/.env
@@ -1,21 +1,7 @@
-# Financial Modeling Prep API Key (for stock data)
-# Get a free key from: https://site.financialmodelingprep.com/developer/docs/
-FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
-
-# Truelayer API Credentials (for bank linking simulation)
-# These are sandbox keys and are safe to be here.
-NEXT_PUBLIC_TRUELAYER_AUTH_URL=https://auth.truelayer-sandbox.com/?response_type=code&client_id=finpulse-sandbox-d9611f&scope=info%20accounts%20balance%20cards%20transactions%20offline_access&redirect_uri=https://finpulse-860du.web.app/api/truelayer/callback&providers=uk-ob-all%20uk-oauth-all
-TRUELAYER_CLIENT_ID=finpulse-sandbox-d9611f
-TRUELAYER_CLIENT_SECRET=161f5f3e-52f1-482a-9e79-4594a974b655
-TRUELAYER_REDIRECT_URI=https://finpulse-860du.web.app/api/truelayer/callback
-
-# ExchangeRate-API Key (for currency conversion)
-# This is a public key for demonstration purposes.
-EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
-
-
-# Admin Dashboard API Keys (generate your own secure random strings)
-ADMIN_API_KEY=
-ADMIN_SECRET_KEY=
-NEXT_PUBLIC_BASE_URL=
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID=finpulse-sandbox-d9611f
+FINANCIAL_MODELING_PREP_API_KEY="8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ"
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
+TRUELAYER_CLIENT_SECRET="161f5f3e-52f1-482a-9e79-4594a974b655"
+NEXT_PUBLIC_BASE_URL="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev"
+ADMIN_API_KEY="your_admin_api_key_here"
+ADMIN_SECRET_KEY="your_admin_secret_key_here"
