Again Connection Failed There was an error connecting your account. (tru

--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-FINANCIAL_MODELING_PREP_API_KEY="8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ"
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET="161f5f3e-52f1-482a-9e79-4594a974b655"
-NEXT_PUBLIC_BASE_URL="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev"
-ADMIN_API_KEY="your_admin_api_key_here"
-ADMIN_SECRET_KEY="your_admin_secret_key_here"
+TRUELAYER_CLIENT_SECRET=35a26569-e09f-4f4b-84a2-4a00b86a02b1
+FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
+ADMIN_API_KEY=admin_key_123
+ADMIN_SECRET_KEY=admin_secret_456
