move all the data's from the src/.env file to the root .env and delete s

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-TRUELAYER_CLIENT_SECRET=35a26569-e09f-4f4b-84a2-4a00b86a02b1
-FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
+TRUELAYER_CLIENT_SECRET=
+FINANCIAL_MODELING_PREP_API_KEY=
 ADMIN_API_KEY=admin_key_123
 ADMIN_SECRET_KEY=admin_secret_456
+NEXT_PUBLIC_BASE_URL=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
