--- a/workspace/.env
+++ b/workspace/.env
@@ -1,7 +1,5 @@
-TRUELAYER_CLIENT_SECRET=01d83c5d-f47f-4822-b5ab-e96cc7127f98
-FINANCIAL_MODELING_PREP_API_KEY=c3725b3992b8eb68a25a3d76b1f280a3
-NEXT_PUBLIC_BASE_URL=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
-ADMIN_API_KEY=admin_key_12345
-ADMIN_SECRET_KEY=admin_secret_67890
-EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
+TRUELAYER_CLIENT_SECRET="01d83c5d-f47f-4822-b5ab-e96cc7127f98"
+FINANCIAL_MODELING_PREP_API_KEY="c8413a936a25b6a8562890991c7849d1"
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
