There was an error connecting your account. (truelayer_token_exchange_fa

--- a/workspace/.env
+++ b/workspace/.env
@@ -1,5 +1,11 @@
+ADMIN_API_KEY=your_admin_api_key
+ADMIN_SECRET_KEY=your_admin_secret_key
+
+# This is the Financial Modeling Prep API key for fetching stock data.
+# Get a free key here: https://site.financialmodelingprep.com/developer/docs
+FINANCIAL_MODELING_PREP_API_KEY=YOUR_API_KEY
+
+# Truelayer Credentials for Bank Linking
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
 TRUELAYER_CLIENT_SECRET="01d83c5d-f47f-4822-b5ab-e96cc7127f98"
-FINANCIAL_MODELING_PREP_API_KEY="c8413a936a25b6a8562890991c7849d1"
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
 NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
