https://auth.truelayer-sandbox.com/?response_type=code&client_id=sandbox

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-TRUELAYER_CLIENT_SECRET=01d83c5d-f47f-4822-b5ab-e96cc7127f98
-FINANCIAL_MODELING_PREP_API_KEY=45834893739a890a5d6205845091a13a
-ADMIN_API_KEY=admin-key-finpulse
-ADMIN_SECRET_KEY=admin-secret-finpulse
-NEXT_PUBLIC_BASE_URL=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
+TRUELAYER_CLIENT_SECRET="01d83c5d-f47f-4822-b5ab-e96cc7127f98"
+FINANCIAL_MODELING_PREP_API_KEY="c8211155183a4835566a77494a46a6c2"
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+ADMIN_API_KEY="finpulse_admin_api_key_placeholder"
+ADMIN_SECRET_KEY="finpulse_admin_secret_key_placeholder"
+NEXT_PUBLIC_BASE_URL="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev"
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://console.truelayer.com/redirect-page"
