--- a/workspace/.env
+++ b/workspace/.env
@@ -1,11 +1,7 @@
-ADMIN_API_KEY=your_admin_api_key
-ADMIN_SECRET_KEY=your_admin_secret_key
-
-# This is the Financial Modeling Prep API key for fetching stock data.
-# Get a free key here: https://site.financialmodelingprep.com/developer/docs
-FINANCIAL_MODELING_PREP_API_KEY=YOUR_API_KEY
-
-# Truelayer Credentials for Bank Linking
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET="01d83c5d-f47f-4822-b5ab-e96cc7127f98"
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
+TRUELAYER_CLIENT_SECRET=3c5d6c81-4560-4416-8367-1563f6456f91
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
+FINANCIAL_MODELING_PREP_API_KEY=b2c4c1a7b9f8d3e2a9a5c8e3f4g6h7i8
+EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
+ADMIN_API_KEY=admin-key-finpulse-12345
+ADMIN_SECRET_KEY=admin-secret-finpulse-abcde
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback
