So now which .env we are using now

--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
+# Truelayer Credentials - used for linking UK/EU bank accounts
+# The Client ID is public and comes from your Truelayer dashboard.
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET="01d83c5d-f47f-4822-b5ab-e96cc7127f98"
-FINANCIAL_MODELING_PREP_API_KEY="c8211155183a4835566a77494a46a6c2"
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
-ADMIN_API_KEY="finpulse_admin_api_key_placeholder"
-ADMIN_SECRET_KEY="finpulse_admin_secret_key_placeholder"
-NEXT_PUBLIC_BASE_URL="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev"
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://console.truelayer.com/redirect-page"
+# The Redirect URI must EXACTLY match the one in your Truelayer dashboard.
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
+# The Client Secret is confidential and should be retrieved from your Truelayer dashboard.
+TRUELAYER_CLIENT_SECRET="your_truelayer_client_secret_here"
+
+# Financial Modeling Prep API Key - used for fetching stock data
+FINANCIAL_MODELING_PREP_API_KEY="your_financial_modeling_prep_api_key_here"
+
+# Admin Dashboard API Credentials
+ADMIN_API_KEY="your_admin_api_key"
+ADMIN_SECRET_KEY="your_admin_secret_key"
