OK I can see duplicates datas in root .env and please remove only those

--- a/.env
+++ b/.env
@@ -1,14 +1,45 @@
-# Truelayer Credentials - used for linking UK/EU bank accounts
-# The Client ID is public and comes from your Truelayer dashboard.
+# -------------------------------------
+# FinPulse Environment Variables
+# -------------------------------------
+
+# --- Truelayer Open Banking ---
+# Used for connecting to UK/EU bank accounts via the "Link Account" page.
+# Get your credentials from: https://console.truelayer.com/
+#
+# Processed in:
+# - src/hooks/use-auth.tsx (client-side)
+# - src/app/api/truelayer/callback/route.ts (server-side)
+
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-# The Redirect URI must EXACTLY match the one in your Truelayer dashboard.
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
-# The Client Secret is confidential and should be retrieved from your Truelayer dashboard.
 TRUELAYER_CLIENT_SECRET="your_truelayer_client_secret_here"
 
-# Financial Modeling Prep API Key - used for fetching stock data
-FINANCIAL_MODELING_PREP_API_KEY="your_financial_modeling_prep_api_key_here"
 
-# Admin Dashboard API Credentials
-ADMIN_API_KEY="your_admin_api_key"
-ADMIN_SECRET_KEY="your_admin_secret_key"
+# --- Financial Modeling Prep ---
+# Used for fetching real-time stock prices on the "Investments" page.
+# Get your free API key from: https://site.financialmodelingprep.com/developer/docs
+#
+# Processed in:
+# - src/lib/actions.ts
+
+FINANCIAL_MODELING_PREP_API_KEY="your_fmp_api_key_here"
+
+
+# --- Admin Dashboard Security ---
+# Used to protect the admin API endpoint from unauthorized access.
+# You can use any secure, random strings for these values.
+#
+# Processed in:
+# - src/app/api/admin/stats/route.ts
+
+ADMIN_API_KEY="your_admin_api_key_here"
+ADMIN_SECRET_KEY="your_admin_secret_key_here"
+
+
+# --- Currency Exchange API ---
+# Used for the currency converter in the "Calculator" page.
+# Get your free API key from: https://exchangerate.host/
+#
+# Processed in:
+# - src/lib/currency-actions.ts
+
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
