Which files are proccessing from.  .env

--- a/.env
+++ b/.env
@@ -1,45 +1,18 @@
-# -------------------------------------
-# FinPulse Environment Variables
-# -------------------------------------
+# GENKIT_ENV is used by src/ai/genkit.ts for development-specific plugins
+GENKIT_ENV=dev
 
-# --- Truelayer Open Banking ---
-# Used for connecting to UK/EU bank accounts via the "Link Account" page.
-# Get your credentials from: https://console.truelayer.com/
-#
-# Processed in:
-# - src/hooks/use-auth.tsx (client-side)
-# - src/app/api/truelayer/callback/route.ts (server-side)
-
+# Used by src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET="your_truelayer_client_secret_here"
 
+# Used by src/api/truelayer/callback/route.ts
+TRUELAYER_CLIENT_SECRET=""
 
-# --- Financial Modeling Prep ---
-# Used for fetching real-time stock prices on the "Investments" page.
-# Get your free API key from: https://site.financialmodelingprep.com/developer/docs
-#
-# Processed in:
-# - src/lib/actions.ts
+# Used by src/api/admin/stats/route.ts
+ADMIN_API_KEY=""
+ADMIN_SECRET_KEY=""
 
-FINANCIAL_MODELING_PREP_API_KEY="your_fmp_api_key_here"
+# Used by src/lib/actions.ts for the Investments page
+FINANCIAL_MODELING_PREP_API_KEY=""
 
-
-# --- Admin Dashboard Security ---
-# Used to protect the admin API endpoint from unauthorized access.
-# You can use any secure, random strings for these values.
-#
-# Processed in:
-# - src/app/api/admin/stats/route.ts
-
-ADMIN_API_KEY="your_admin_api_key_here"
-ADMIN_SECRET_KEY="your_admin_secret_key_here"
-
-
-# --- Currency Exchange API ---
-# Used for the currency converter in the "Calculator" page.
-# Get your free API key from: https://exchangerate.host/
-#
-# Processed in:
-# - src/lib/currency-actions.ts
-
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+# Used by src/lib/currency-actions.ts for the Calculator page
+EXCHANGERATE_API_KEY=""
