And are they correctly pointing to them

--- a/.env
+++ b/.env
@@ -1,18 +1,13 @@
-# GENKIT_ENV is used by src/ai/genkit.ts for development-specific plugins
-GENKIT_ENV=dev
-
-# Used by src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
+# Truelayer Credentials (used in src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts)
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-
-# Used by src/api/truelayer/callback/route.ts
 TRUELAYER_CLIENT_SECRET=""
 
-# Used by src/api/admin/stats/route.ts
-ADMIN_API_KEY=""
-ADMIN_SECRET_KEY=""
-
-# Used by src/lib/actions.ts for the Investments page
+# Financial Modeling Prep API Key (used in src/lib/actions.ts for stock data)
 FINANCIAL_MODELING_PREP_API_KEY=""
 
-# Used by src/lib/currency-actions.ts for the Calculator page
+# ExchangeRate-API Key (used in src/lib/currency-actions.ts)
 EXCHANGERATE_API_KEY=""
+
+# Admin Panel API Keys (used in src/api/admin/stats/route.ts)
+ADMIN_API_KEY=""
+ADMIN_SECRET_KEY=""
