I got external page error when trying to connect bank account

--- a/.env
+++ b/.env
@@ -1,13 +1,22 @@
-# Truelayer Credentials (used in src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts)
+
+# Truelayer Bank Connection API
+# Get your keys from https://console.truelayer.com/
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
 TRUELAYER_CLIENT_SECRET=""
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
 
-# Financial Modeling Prep API Key (used in src/lib/actions.ts for stock data)
-FINANCIAL_MODELING_PREP_API_KEY=""
-
-# ExchangeRate-API Key (used in src/lib/currency-actions.ts)
-EXCHANGERATE_API_KEY=""
-
-# Admin Panel API Keys (used in src/api/admin/stats/route.ts)
+# Admin Dashboard API Keys (for a separate admin frontend)
 ADMIN_API_KEY=""
 ADMIN_SECRET_KEY=""
+
+# FinancialModelingPrep API (for stock data)
+# Get a free key from https://site.financialmodelingprep.com/developer/docs
+FINANCIAL_MODELING_PREP_API_KEY=""
+
+# ExchangeRate-Host API (for currency conversion)
+# Free, no key required for basic use. Sign up for more features.
+# https://exchange-rate.host/
+EXCHANGERATE_API_KEY=""
+
+# Firebase credentials are handled automatically by Firebase Studio.
+# You do not need to add them here.
