Error: Failed to exchange code for token.     at LinkAccountPageContent.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Truelayer Bank Connection API
 # Get your keys from https://console.truelayer.com/
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET=""
+TRUELAYER_CLIENT_SECRET="161f5f3e-52f1-482a-9e79-4594a974b655"
 NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
 
 # Admin Dashboard API Keys (for a separate admin frontend)
@@ -11,12 +11,12 @@ ADMIN_SECRET_KEY=""
 
 # FinancialModelingPrep API (for stock data)
 # Get a free key from https://site.financialmodelingprep.com/developer/docs
-FINANCIAL_MODELING_PREP_API_KEY=""
+FINANCIAL_MODELING_PREP_API_KEY="8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ"
 
 # ExchangeRate-Host API (for currency conversion)
 # Free, no key required for basic use. Sign up for more features.
 # https://exchange-rate.host/
-EXCHANGERATE_API_KEY=""
+EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
 
 # Firebase credentials are handled automatically by Firebase Studio.
 # You do not need to add them here.
