Update it with mine

--- a/.env
+++ b/.env
@@ -1,22 +1,18 @@
+# Used by: src/api/admin/stats/route.ts
+ADMIN_API_KEY="your_admin_api_key"
+ADMIN_SECRET_KEY="your_admin_secret_key"
 
-# Truelayer Bank Connection API
-# Get your keys from https://console.truelayer.com/
+# Used by: src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
 NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-TRUELAYER_CLIENT_SECRET="161f5f3e-52f1-482a-9e79-4594a974b655"
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
 
-# Admin Dashboard API Keys (for a separate admin frontend)
-ADMIN_API_KEY=""
-ADMIN_SECRET_KEY=""
+# Used by: src/api/truelayer/callback/route.ts
+TRUELAYER_CLIENT_SECRET=""
 
-# FinancialModelingPrep API (for stock data)
-# Get a free key from https://site.financialmodelingprep.com/developer/docs
-FINANCIAL_MODELING_PREP_API_KEY="8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ"
+# Used by: src/lib/actions.ts
+FINANCIAL_MODELING_PREP_API_KEY=""
 
-# ExchangeRate-Host API (for currency conversion)
-# Free, no key required for basic use. Sign up for more features.
-# https://exchange-rate.host/
-EXCHANGERATE_API_KEY="e6bfac69f7921744c90ae5232156c465"
+# Used by: src/lib/currency-actions.ts
+EXCHANGERATE_API_KEY=""
 
-# Firebase credentials are handled automatically by Firebase Studio.
-# You do not need to add them here.
+# Used by: src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9002-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
