--- a/.env
+++ b/.env
@@ -1,18 +1,20 @@
-# Used by: src/api/admin/stats/route.ts
-ADMIN_API_KEY="your_admin_api_key"
-ADMIN_SECRET_KEY="your_admin_secret_key"
-
-# Used by: src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-
-# Used by: src/api/truelayer/callback/route.ts
-TRUELAYER_CLIENT_SECRET=""
-
-# Used by: src/lib/actions.ts
+# Financial Modeling Prep API Key (for stock data)
+# Used in: src/lib/actions.ts
 FINANCIAL_MODELING_PREP_API_KEY=""
 
-# Used by: src/lib/currency-actions.ts
+# Truelayer API Credentials (for bank linking)
+# Used in: src/hooks/use-auth.tsx
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
+# Used in: src/api/truelayer/callback/route.ts
+TRUELAYER_CLIENT_SECRET=""
+# Used in: src/hooks/use-auth.tsx AND src/api/truelayer/callback/route.ts
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://900-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
+
+# ExchangeRate-Host API Key (for currency conversion)
+# Used in: src/lib/currency-actions.ts
 EXCHANGERATE_API_KEY=""
 
-# Used by: src/hooks/use-auth.tsx and src/api/truelayer/callback/route.ts
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://9002-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
+# Admin API credentials (for admin dashboard access)
+# Used in: src/api/admin/stats/route.ts
+ADMIN_API_KEY="admin-key"
+ADMIN_SECRET_KEY="admin-secret"
