--- a/.env
+++ b/.env
@@ -1,20 +1,7 @@
-# Financial Modeling Prep API Key (for stock data)
-# Used in: src/lib/actions.ts
-FINANCIAL_MODELING_PREP_API_KEY=""
-
-# Truelayer API Credentials (for bank linking)
-# Used in: src/hooks/use-auth.tsx
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID="sandbox-finpulse-0b40c2"
-# Used in: src/api/truelayer/callback/route.ts
-TRUELAYER_CLIENT_SECRET=""
-# Used in: src/hooks/use-auth.tsx AND src/api/truelayer/callback/route.ts
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI="https://900-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback"
-
-# ExchangeRate-Host API Key (for currency conversion)
-# Used in: src/lib/currency-actions.ts
-EXCHANGERATE_API_KEY=""
-
-# Admin API credentials (for admin dashboard access)
-# Used in: src/api/admin/stats/route.ts
-ADMIN_API_KEY="admin-key"
-ADMIN_SECRET_KEY="admin-secret"
+ADMIN_API_KEY=your_admin_api_key_here
+ADMIN_SECRET_KEY=your_admin_secret_key_here
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
+TRUELAYER_CLIENT_SECRET=your_truelayer_client_secret_here
+FINANCIAL_MODELING_PREP_API_KEY=your_fmp_api_key_here
+EXCHANGERATE_API_KEY=your_exchangerate_api_key_here
+NEXT_PUBLIC_TRUELAYER_REDIRECT_URI=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback
