--- a/workspace/.env
+++ b/workspace/.env
@@ -1,8 +1,6 @@
-ADMIN_API_KEY=your_admin_api_key_here
-ADMIN_SECRET_KEY=your_admin_secret_key_here
-NEXT_PUBLIC_TRUELAYER_CLIENT_ID=sandbox-finpulse-0b40c2
-TRUELAYER_CLIENT_SECRET=01d83c5d-f47f-4822-b5ab-e96cc7127f98
-FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
-EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
-NEXT_PUBLIC_TRUELAYER_REDIRECT_URI=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback
-GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
+
+NEXT_PUBLIC_TRUELAYER_CLIENT_ID=your_client_id_here
+TRUELAYER_CLIENT_SECRET=your_client_secret_here
+TRUELAYER_REDIRECT_URI=https://9000-firebase-studio-1756463262326.cluster-cbeiita7rbe7iuwhvjs5zww2i4.cloudworkstations.dev/api/truelayer/callback
+TRUELAYER_AUTH_URL=https://auth.truelayer.com
+TRUELAYER_API_URL=https://api.truelayer.com
