If fmp is not working let find alternative

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-ADMIN_API_KEY=your_admin_api_key_here
-ADMIN_SECRET_KEY=your_admin_secret_key_here
-GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
-FINANCIAL_MODELING_PREP_API_KEY=8I9oHh7uzXylUjOibfYAkLfoV3JmNVzZ
+
+# Get a free API key from https://www.alphavantage.co/support/#api-key
+ALPHA_VANTAGE_API_KEY=
