--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 # Get a free API key from https://www.alphavantage.co/support/#api-key
-ALPHA_VANTAGE_API_KEY=
+ALPHA_VANTAGE_API_KEY=VYKS83DPJRFOG7FJ
+GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
