why are you not feaching the api in the env butt please don't update env

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # Get a free API key from https://www.alphavantage.co/support/#api-key
 ALPHA_VANTAGE_API_KEY=VYKS83DPJRFOG7FJ
 GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
+EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
