Import the module first.                           const Alpaca = requir

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
 ALPHA_VANTAGE_API_KEY=VYKS83DPJRFOG7FJ
 GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
 EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
+ALPACA_API_KEY=PKQ89O1L3STSSOXT31S2
+ALPACA_SECRET_KEY=0f50c0FgVdJIYCqM9aU93vLqlSmg69Jf1XWa5NuW
+ALPACA_PAPER=true
