--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 
-# Get a free API key from https://www.alphavantage.co/support/#api-key
-ALPHA_VANTAGE_API_KEY=VYKS83DPJRFOG7FJ
-GEMINI_API_KEY=AIzaSyB6C-HUTmPFgepLPRK78eenCQUdQ4IS50Y
-EXCHANGERATE_API_KEY=e6bfac69f7921744c90ae5232156c465
-ALPACA_API_KEY=PKQ89O1L3STSSOXT31S2
-ALPACA_SECRET_KEY=0f50c0FgVdJIYCqM9aU93vLqlSmg69Jf1XWa5NuW
-ALPACA_PAPER=true
+# Remove these variables as they are no longer used by the application
+# APCA_API_KEY_ID=""
+# APCA_API_SECRET_KEY=""
+# APCA_API_PAPER="true"
+GEMINI_API_KEY=
