--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # Remove these variables as they are no longer used by the application
-# APCA_API_KEY_ID="PKQ89O1L3STSSOXT31S2"
-# APCA_API_SECRET_KEY="0f50c0FgVdJIYCqM9aU93vLqlSmg69Jf1XWa5NuW"
+# APCA_API_KEY_ID=PKBNWXH4BRAADA0U9GG2
+# APCA_API_SECRET_KEY=EryF4i9M1EwXtWRuMtY5QLvDWVmrdqxAkm2a0Eji
 # APCA_API_PAPER="true"
 GEMINI_API_KEY=AIzaSyBVbXFdk4_LJKfdLR5jXQyKY3djympyuZ4
