But any time user navigate to investment page Investment Feature Error U

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-APCA_API_KEY_ID=YOUR_KEY_ID
-APCA_API_SECRET_KEY=YOUR_SECRET_KEY
-GEMINI_API_KEY=AIzaSyBVbXFdk4_LJKfdLR5jXQyKY3djympyuZ4
+
+# Alpaca API Keys for Paper Trading
+# Get your keys from the Alpaca dashboard: https://app.alpaca.markets/paper/dashboard/overview
+NEXT_PUBLIC_APCA_API_KEY_ID="YOUR_KEY_ID"
+NEXT_PUBLIC_APCA_API_SECRET_KEY="YOUR_SECRET_KEY"
+
+# Admin API Keys for connecting to the Admin Dashboard (optional)
+ADMIN_API_KEY="your-admin-api-key"
+ADMIN_SECRET_KEY="your-admin-secret-key"
