--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-APCA_API_KEY_ID=
-APCA_API_SECRET_KEY=
+APCA_API_KEY_ID=PKBNWXH4BRAADA0U9GG2
+APCA_API_SECRET_KEY=EryF4i9M1EwXtWRuMtY5QLvDWVmrdqxAkm2a0Eji
+
